<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="@drawable/bintang"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="442dp"
        android:layout_height="270dp"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="350dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/username"
            android:hint="@string/Username"
            android:paddingLeft="2dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#ffffff"
            android:drawableLeft="@drawable/password"
            android:hint="@string/Password" />
    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="480dp"
        android:background="#04ea00"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="530dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingRight="8dp"
        android:text="@string/not_registered"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:paddingLeft="18dp"
        android:text="@string/registered"
        android:textColor="#04ea00"
        android:textStyle="bold" />

    </LinearLayout>
</RelativeLayout>
